<resources>
    <string name="app_name">Mascotas</string>
    <string name="perro_imagen">Perro imagen</string>
    <string name="Nombre">Nombre</string>
    <string name="tvNombre">TextView</string>
    <string name="email">Email</string>
    <string name="Telefono">Telefono</string>
    <string name="title_activity_detalle">Detalle</string>
    <string name="Like_button">Like button</string>
    <string name="likes">Likes</string>
    <string name="contacto">Contacto</string>
    <string name="acerca_de">Acerca de</string>
    <string name="title_activity_contacto">Contacto</string>
    <string name="title_activity_acerca_de">AcercaDe</string>
    <string name="appbar_scrolling_view_behavior">appbar</string>
    <string name="enviar_mensaje">Enviar Mensaje</string>
    <string name="mensaje">Mensaje</string>
    <string name="correo">Correo</string>
    <string name="Bio">    Herbert Daniel Rodríguez \n
        Seo speciallist \n FullStack developer \n see the complete profile in .... \n
        https://www.linkedin.com/in/android-developer-1010 \n Visit http://www.chaacho.com</string>
    <string name="biografia">Biografia</string>

    <!-- DO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="NomMascota">TextView</string>
    <string name="jake">JAKE</string>
    <string name="Likes">Likes</string>
    <string name="Likes">Likes</string>

</resources>
