<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cvMascota"
    android:layout_width="match_parent"
    android:layout_height="165sp"
    app:cardBackgroundColor="#FFFFFF">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/llmascota"
        android:layout_width="match_parent"
        android:layout_height="@dimen/cardview_height"
        android:layout_margin="@dimen/margin_cardview"
        android:background="@color/colorPrimary"
        android:padding="@dimen/margin_cardview">


        <ImageView
            android:id="@+id/ivLike"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_marginStart="23dp"
            android:layout_marginTop="46dp"

            android:layout_marginEnd="100dp"
            android:layout_marginBottom="9dp"
            android:contentDescription="@string/Like_button"
            android:tint="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/tvMail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/tvLikes"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/hueso" />

        <TextView
            android:id="@+id/tvLikes"
            android:layout_width="69dp"
            android:layout_height="19dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/Telefono"
            app:layout_constraintBottom_toTopOf="@+id/tvMail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tvNombre"
            app:layout_constraintTop_toBottomOf="@+id/tvNombre" />

        <TextView
            android:id="@+id/tvMail"
            android:layout_width="229dp"
            android:layout_height="25dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="65dp"
            android:text="@string/email"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvLikes"
            app:layout_constraintTop_toBottomOf="@+id/tvLikes" />

        <TextView
            android:id="@+id/tvNombre"
            android:layout_width="66dp"
            android:layout_height="18dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="160dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/Nombre"
            android:text="@string/tvNombre"
            app:layout_constraintBottom_toTopOf="@+id/tvLikes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.157"
            app:layout_constraintStart_toEndOf="@+id/ivFotoPerro"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/Nombre" />

        <com.mikhaellopez.circularimageview.CircularImageView

            android:id="@+id/ivFotoPerro"
            android:layout_width="101dp"
            android:layout_height="99dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="9dp"
            android:layout_marginBottom="33dp"
            android:contentDescription="@string/perro_imagen"
            app:civ_border_color="#3f51b5"
            app:civ_border_width="4dp"
            app:civ_shadow="true"
            app:civ_shadow_color="#3f51b5"
            app:civ_shadow_radius="10"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvLikes"
            app:layout_constraintHorizontal_bias="0.657"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/perro" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>