<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Detalle"
    tools:showIn="@layout/activity_detalle">

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="364dp"
        android:layout_height="56dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Nombre"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvMail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/email"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvNombre"
        app:layout_constraintTop_toBottomOf="@+id/tvNombre" />

    <ImageView
        android:id="@+id/ivMail"
        android:layout_width="19dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:background="#2196F3"
        android:contentDescription="@string/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvMail"
        app:srcCompat="@android:drawable/sym_action_email" />

    <ImageView
        android:id="@+id/ivTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="#2196F3"
        android:contentDescription="@string/Telefono"
        app:layout_constraintEnd_toStartOf="@+id/tvTel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivMail"
        app:srcCompat="@android:drawable/stat_sys_speakerphone" />

    <TextView
        android:id="@+id/tvTel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Telefono"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/ivMail"
        app:layout_constraintTop_toBottomOf="@+id/tvMail" />

    <ImageView
        android:id="@+id/ivLike"
        android:layout_width="19dp"
        android:layout_height="21dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="#2196F3"
        android:contentDescription="@string/Like_button"
        app:layout_constraintEnd_toStartOf="@+id/tvLike"
        app:layout_constraintTop_toBottomOf="@+id/ivTelefono"
        app:srcCompat="@drawable/ic_action_like" />

    <TextView
        android:id="@+id/tvLike"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/Like_button"
        android:text="Likes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvTel"
        app:layout_constraintTop_toBottomOf="@+id/tvTel" />
</androidx.constraintlayout.widget.ConstraintLayout>