<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"

        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.mikhaellopez.circularimageview.CircularImageView

                    android:id="@+id/ivFotoPerro"
                    android:layout_width="101dp"
                    android:layout_height="99dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/perro_imagen"
                    app:civ_border_color="#3f51b5"
                    app:civ_border_width="4dp"
                    app:civ_shadow="true"
                    app:civ_shadow_color="#3f51b5"
                    app:civ_shadow_radius="10"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/perro" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/biografia"
                android:ems="20"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="start|top"
                android:importantForAutofill="no"
                android:padding="10sp"
                android:selectAllOnFocus="false"
                android:text="@string/Bio"
                android:textAlignment="center"
                android:textSize="24sp" />

        </LinearLayout>
    </ScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>